# napari-large-3d-vis

./: README.md  setup.cfg
napari_large_3D_vis_ch/: __init__.py  _widget.py  napari.yaml  vis3D_ch.py
