[metadata]
name = napari-large-3D-vis-ch
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
install_requires =
    napari==0.4.18
    numpy==1.24.4
    magicgui==0.8.0
    tifffile==2023.7.10
    zarr==2.10.0
    dask==2023.5.0
    vispy==0.12.2
    PyYAML==5.4.1
    fire==0.5.0
    path==16.7.1
    gc-python-utils==0.0.1
    ome-zarr==0.8.3
    memory-profiler==0.61.0
    superqt==0.6.1
python_requires = >=3.8
include_package_data = True


[options.entry_points]
napari.manifest =
    napari-large-3D-vis = napari_large_3D_vis_ch:napari.yaml

